Closed Bug 1737209 Opened 3 years ago Closed 2 years ago

WPT test transform-interpolation-rotate-slerp.html fails in Firefox

Categories

(Core :: Layout, defect, P3)

defect

Tracking

()

RESOLVED FIXED
119 Branch
Tracking Status
firefox119 --- fixed

People

(Reporter: dholbert, Assigned: boris)

References

(Blocks 2 open bugs)

Details

Attachments

(2 files)

Filing this bug for this WPT failure:

https://wpt.fyi/results/css/css-transforms/animation/transform-interpolation-rotate-slerp.html

Direct link to testcase:
https://wpt.live/css/css-transforms/animation/transform-interpolation-rotate-slerp.html
Reference case:
https://wpt.live/css/css-transforms/animation/transform-interpolation-ref.html?rotateSlerp

In Firefox, the first rectangle has its blue section at the bottom-right in Firefox, whereas the reference case (and other browsers) have that blue section at the top-left.

This test happens to be in the 'compat2021' subset of WPT tests; hence, filing as blocking that metabug.

The severity field is not set for this bug.
:emilio, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)
Severity: -- → S3
Flags: needinfo?(emilio)
Priority: -- → P3

Per wiki,
https://en.wikipedia.org/wiki/Quaternions_and_spatial_rotation,
we have to make sure the range of the angle is limited to [0, 360deg).

Attachment #9350549 - Attachment description: Bug 1737209 - Fix the conversion from (axis,angle) pair to the quaternion. → Bug 1737209 - Fix the conversion from (axis,angle) pair to the quaternion vector.
Assignee: nobody → boris.chiou
Status: NEW → ASSIGNED

We keep these functions because we used them for compositor animations before
merging stylo. Now we always use the equivalent rust version for all the
transform interpolation, on both the main-thread and the compositor thread.

Pushed by bchiou@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/249fcb88ac15 Remove unused functions of decomposing 2d and 3d matrix. r=zrhoffman https://hg.mozilla.org/integration/autoland/rev/76deb26ecf8a Fix the conversion from (axis,angle) pair to the quaternion vector. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 119 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: