Bug 1737209 - Fix the conversion from (axis,angle) pair to the quaternion vector. r=emilio

Basically, quaternion vectors make sense only when the rotation is within
(-360deg, 360deg). If its angle is larger than or equal to 360deg, its
direction may be different, so we have to tweak the conversion.

Also, tweak the code of interpolation for rotate3D to match the spec and
put more comments there.

Differential Revision: https://phabricator.services.mozilla.com/D186998